# OpenXBOX

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  alloc.h  cpu.cpp  cpu.h  cpu_uc.cpp  cpu_uc.h  dev.h  gdbserver.cpp  gdbserver.h  gdt.h  log.cpp  log.h  main.cpp  mem.h  memmgr.cpp  memmgr.h  pmemmgr.cpp  sched.cpp  sched.h  timer.h  tss.h  util.h  xbe.h  xbox.cpp  xbox.h
src/kernel/: AvGetSavedDataAddress.cpp  AvSendTVEncoderOption.cpp  AvSetDisplayMode.cpp  AvSetSavedDataAddress.cpp  CMakeLists.txt  DbgBreakPoint.cpp  DbgBreakPointWithStatus.cpp  DbgLoadImageSymbols.cpp  DbgPrint.cpp  DbgPrompt.cpp  DbgUnLoadImageSymbols.cpp  ExAcquireReadWriteLockExclusive.cpp  ExAcquireReadWriteLockShared.cpp  ExAllocatePool.cpp  ExAllocatePoolWithTag.cpp  ExFreePool.cpp  ExInitializeReadWriteLock.cpp  ExInterlockedAddLargeInteger.cpp  ExInterlockedAddLargeStatistic.cpp  ExInterlockedCompareExchange64.cpp  ExQueryNonVolatileSetting.cpp  ExQueryPoolBlockSize.cpp  ExRaiseException.cpp  ExRaiseStatus.cpp  ExReadWriteRefurbInfo.cpp  ExReleaseReadWriteLock.cpp  ExSaveNonVolatileSetting.cpp  ExfInterlockedInsertHeadList.cpp  ExfInterlockedInsertTailList.cpp  ExfInterlockedRemoveHeadList.cpp  FscGetCacheSize.cpp  FscInvalidateIdleBlocks.cpp  FscSetCacheSize.cpp  HalBootSMCVideoMode.cpp  HalClearSoftwareInterrupt.cpp  HalDisableSystemInterrupt.cpp  HalEnableSecureTrayEject.cpp  HalEnableSystemInterrupt.cpp  HalGetInterruptVector.cpp  HalInitiateShutdown.cpp  (+305 more)
src/kernel/impl/: error.cpp  error.h  gdt.cpp  gdt.h  kernel.cpp  kernel.h  kernel_av.cpp  kernel_ex.cpp  kernel_hal.cpp  kernel_io.cpp  kernel_ke.cpp  kernel_ki.cpp  kernel_ki.h  kernel_misc.cpp  kernel_mm.cpp  kernel_nt.cpp  kernel_ps.cpp  kernel_rtl.cpp  objmgr.h  pmemmgr.cpp  pmemmgr.h  sched.cpp  sched.h  thread.cpp  thread.h  tls.h  tss.h
src/video/: CMakeLists.txt  gloffscreen.c  nv2a.c  nv2a.cpp  nv2a.h  nv2a_debug.h  nv2a_pcrtc.cpp  nv2a_pfb.cpp  nv2a_pfifo.cpp  nv2a_pgraph.cpp  nv2a_pmc.cpp  nv2a_pramdac.cpp  nv2a_psh.cpp  nv2a_psh.h  nv2a_shaders.cpp  nv2a_shaders.h  nv2a_user.cpp  nv2a_vsh.cpp  nv2a_vsh.h  swizzle.cpp  video.cpp  video.h
tools/gen_kernel_methods/: kdecl.h
